syntax = "proto3";

package reference;

option go_package = "github.com/monax/hoard/v8/reference";

message Ref {
    bytes Address = 1;
    bytes SecretKey = 2;
    bytes Salt = 3;

    // Version indicates whether to undergo further decoding
    int32 Version = 4;
}

